test/analyze/match/exhasutive_bytes.exp
Error: Inexhaustive pattern matching. For example the pattern `2` is not matched.
test/analyze/match/exhasutive_bytes.myte:4:2-7:3
 4 | /   match (x) {
   | |   ^^^^^^^^^^^
 5 | |     | 0 -> ()
   | | ^^^^^^^^^^^^^
 6 | |     | 1 -> ()
   | | ^^^^^^^^^^^^^
 7 | |   }
   | \ ^^^

Error: Inexhaustive pattern matching. For example the pattern `-19` is not matched.
test/analyze/match/exhasutive_bytes.myte:272:2-510:3
 272 | /   match (x) {
     | |   ^^^^^^^^^^^
 273 | |     | -128 -> ()
     | | ^^^^^^^^^^^^^^^^
 274 | |     | -127 -> ()
     | | ^^^^^^^^^^^^^^^^
 ...   |
 509 | |     | 127 -> ()
     | | ^^^^^^^^^^^^^^^
 510 | |   }
     | \ ^^^